# snowflake-pet-project

./: .gitignore  .pre-commit-config.yaml  01-learning.ipynb  02-dag.ipynb  03-write-and-read-nsm.sql  README.md  pyproject.toml  requirements.txt
src/hello/: __init__.py  __main__.py
stage_samples/nsm_parquet/: 0b_sample1.parquet
